kubernetes/nginx/deamonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-deamonsets
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-deamon-pods
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
