kubernetes/nginx/nginx-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-depo-pod
      labels:
        app: nginx

    spec:
       containers:
        - name: nginx
          image: nginx:latest
          ports:
           - containerPort: 80
          livenessProbe:
             httpGet:
               path: /
               port: 80
          readinessProbe:
              httpGet:
                path: /
                port: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
           - name: local-pvc
             mountPath: /var/www/html
       volumes:
          - name: local-pvc
            persistentVolumeClaim:
               claimName: local-pvc
