kubernetes/nginx/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx
            backend:
              service:
                name: nginx-service
                port:
                  number:  8081
          - pathType: Prefix
            path: /nginx2
            backend:
              service:
                name: nginx2-service
                port: 
                  number: 8082
